--- a/themes/blank/layouts/partials/hero.html
+++ b/themes/blank/layouts/partials/hero.html
@@ -1,6 +1,7 @@
 <div class="hero w-full flex">
-  <h1 class="font-semibold text-6xl tracking-tight">
-    Optimist.<br />
-    Designer at <a href="https://railway.com">Railway</a>.
+  <h1 class="font-semibold tracking-tight">
+    Software Designer<br />
+    Lead Designer at <a href="https://railway.com">Railway</a>
+    Curious and stubborn
   </h1>
 </div>
