--- a/public/css/type.css
+++ b/public/css/type.css
@@ -1,13 +1,15 @@
 @font-face {
   font-family: "Jetbrains Mono";
   src: url("../type/jetbrains-mono/JetBrainsMono-Regular.eot");
-  src: url("../type/jetbrains-mono/JetBrainsMono-Regular.eot?#iefix")
+  src:
+    url("../type/jetbrains-mono/JetBrainsMono-Regular.eot?#iefix")
       format("embedded-opentype"),
     url("../type/jetbrains-mono/JetBrainsMono-Regular.woff2") format("woff2"),
     url("../type/jetbrains-mono/JetBrainsMono-Regular.woff") format("woff"),
     url("../type/jetbrains-mono/JetBrainsMono-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 /* @font-face {
   font-family: "Recife Text";
@@ -23,81 +25,93 @@
 @font-face {
   font-family: "Recife Text";
   src: url("../type/recife-text/RecifeTextWeb-BookItalic.eot");
-  src: url("../type/recife-text/RecifeTextWeb-BookItalic.eot?#iefix")
+  src:
+    url("../type/recife-text/RecifeTextWeb-BookItalic.eot?#iefix")
       format("embedded-opentype"),
     url("../type/recife-text/RecifeTextWeb-BookItalic.woff2") format("woff2"),
     url("../type/recife-text/RecifeTextWeb-BookItalic.woff") format("woff"),
     url("../type/recife-text/RecifeTextWeb-BookItalic.ttf") format("truetype");
   font-weight: 400;
   font-style: italic;
+  font-display: swap;
 }
-
-
 
 @font-face {
   font-family: "Recife Text";
   src: url("../type/recife-text/RecifeTextWeb-Regular.eot");
-  src: url("../type/recife-text/RecifeTextWeb-Regular.eot?#iefix")
+  src:
+    url("../type/recife-text/RecifeTextWeb-Regular.eot?#iefix")
       format("embedded-opentyp5"),
     url("../type/recife-text/RecifeTextWeb-Regular.woff2") format("woff2"),
     url("../type/recife-text/RecifeTextWeb-Regular.woff") format("woff"),
     url("../type/recife-text/RecifeTextWeb-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Recife Text";
   src: url("../type/recife-text/RecifeTextWeb-Bold.eot");
-  src: url("../type/recife-text/RecifeTextWeb-Bold.eot?#iefix")
+  src:
+    url("../type/recife-text/RecifeTextWeb-Bold.eot?#iefix")
       format("embedded-opentype"),
     url("../type/recife-text/RecifeTextWeb-Bold.woff2") format("woff2"),
     url("../type/recife-text/RecifeTextWeb-Bold.woff") format("woff"),
     url("../type/recife-text/RecifeTextWeb-Bold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Messina Sans";
   src: url("../type/messina-sans/MessinaSansWeb-Regular.eot");
-  src: url("../type/messina-sans/MessinaSansWeb-Regular.eot?#iefix")
+  src:
+    url("../type/messina-sans/MessinaSansWeb-Regular.eot?#iefix")
       format("embedded-opentype"),
     url("../type/messina-sans/MessinaSansWeb-Regular.woff2") format("woff2"),
     url("../type/messina-sans/MessinaSansWeb-Regular.woff") format("woff"),
     url("../type/messina-sans/MessinaSansWeb-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Messina Sans";
   src: url("../type/messina-sans/MessinaSansWeb-Bold.eot");
-  src: url("../type/messina-sans/MessinaSansWeb-Bold.eot?#iefix")
+  src:
+    url("../type/messina-sans/MessinaSansWeb-Bold.eot?#iefix")
       format("embedded-opentype"),
     url("../type/messina-sans/MessinaSansWeb-Bold.woff2") format("woff2"),
     url("../type/messina-sans/MessinaSansWeb-Bold.woff") format("woff"),
     url("../type/messina-sans/MessinaSansWeb-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Messina Sans";
   src: url("../type/messina-sans/MessinaSansWeb-Black.eot");
-  src: url("../type/messina-sans/MessinaSansWeb-Black.eot?#iefix")
+  src:
+    url("../type/messina-sans/MessinaSansWeb-Black.eot?#iefix")
       format("embedded-opentype"),
     url("../type/messina-sans/MessinaSansWeb-Black.woff2") format("woff2"),
     url("../type/messina-sans/MessinaSansWeb-Black.woff") format("woff"),
     url("../type/messina-sans/MessinaSansWeb-Black.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Messina Sans";
   src: url("../type/messina-sans/MessinaSansWeb-SemiBold.eot");
-  src: url("../type/messina-sans/MessinaSansWeb-SemiBold.eot?#iefix")
+  src:
+    url("../type/messina-sans/MessinaSansWeb-SemiBold.eot?#iefix")
       format("embedded-opentype"),
     url("../type/messina-sans/MessinaSansWeb-SemiBold.woff2") format("woff2"),
     url("../type/messina-sans/MessinaSansWeb-SemiBold.woff") format("woff"),
     url("../type/messina-sans/MessinaSansWeb-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
