--- a/public/style.css
+++ b/public/style.css
@@ -554,38 +554,8 @@ video {
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
+.pointer-events-none {
+  pointer-events: none;
 }
 
 .fixed {
@@ -600,20 +570,40 @@ video {
   position: relative;
 }
 
-.bottom-4 {
-  bottom: 1rem;
+.sticky {
+  position: sticky;
 }
 
-.left-4 {
-  left: 1rem;
+.bottom-4 {
+  bottom: 1rem;
 }
 
 .left-0 {
   left: 0px;
 }
 
+.left-4 {
+  left: 1rem;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.bottom-12 {
+  bottom: 3rem;
+}
+
+.bottom-24 {
+  bottom: 6rem;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 .z-50 {
@@ -625,13 +615,39 @@ video {
   margin-right: auto;
 }
 
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .my-12 {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.my-32 {
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+
+.my-64 {
+  margin-top: 16rem;
+  margin-bottom: 16rem;
+}
+
+.my-96 {
+  margin-top: 24rem;
+  margin-bottom: 24rem;
+}
+
+.my-\[8vw\] {
+  margin-top: 8vw;
+  margin-bottom: 8vw;
 }
 
 .mb-2 {
@@ -674,16 +690,36 @@ video {
   margin-top: 1rem;
 }
 
-.mt-\[8vw\] {
-  margin-top: 8vw;
-}
-
 .mt-auto {
   margin-top: auto;
 }
 
-.ml-64 {
-  margin-left: 16rem;
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mt-\[24vw\] {
+  margin-top: 24vw;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-48 {
+  margin-top: 12rem;
 }
 
 .block {
@@ -702,12 +738,76 @@ video {
   display: grid;
 }
 
+.aspect-\[4\/3\] {
+  aspect-ratio: 4/3;
+}
+
 .h-full {
   height: 100%;
 }
 
-.w-28 {
-  width: 7rem;
+.h-\[100vh\] {
+  height: 100vh;
+}
+
+.h-\[340px\] {
+  height: 340px;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[600vh\] {
+  height: 600vh;
+}
+
+.h-\[60vh\] {
+  height: 60vh;
+}
+
+.h-\[50vh\] {
+  height: 50vh;
+}
+
+.h-\[96vh\] {
+  height: 96vh;
+}
+
+.h-\[92vh\] {
+  height: 92vh;
+}
+
+.h-\[48vh\] {
+  height: 48vh;
+}
+
+.h-\[64vh\] {
+  height: 64vh;
+}
+
+.h-\[72vh\] {
+  height: 72vh;
+}
+
+.max-h-48 {
+  max-height: 12rem;
+}
+
+.max-h-64 {
+  max-height: 16rem;
+}
+
+.max-h-96 {
+  max-height: 24rem;
+}
+
+.w-64 {
+  width: 16rem;
 }
 
 .w-9 {
@@ -718,24 +818,20 @@ video {
   width: 100%;
 }
 
-.w-64 {
-  width: 16rem;
-}
-
 .min-w-9 {
   min-width: 2.25rem;
 }
 
-.min-w-96 {
-  min-width: 24rem;
+.max-w-4xl {
+  max-width: 56rem;
 }
 
 .max-w-\[--content-width\] {
   max-width: var(--content-width);
 }
 
-.max-w-\[16ch\] {
-  max-width: 16ch;
+.max-w-\[1400px\] {
+  max-width: 1400px;
 }
 
 .max-w-\[20ch\] {
@@ -750,10 +846,6 @@ video {
   max-width: 720px;
 }
 
-.max-w-\[800px\] {
-  max-width: 800px;
-}
-
 .max-w-\[var\(--content-width\)\] {
   max-width: var(--content-width);
 }
@@ -766,8 +858,12 @@ video {
   max-width: 36rem;
 }
 
-.max-w-4xl {
-  max-width: 56rem;
+.max-w-\[960px\] {
+  max-width: 960px;
+}
+
+.max-w-\[25ch\] {
+  max-width: 25ch;
 }
 
 .flex-1 {
@@ -778,12 +874,24 @@ video {
   flex-shrink: 0;
 }
 
-.grid-cols-\[256px_1fr\] {
-  grid-template-columns: 256px 1fr;
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .content-center {
@@ -792,10 +900,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-center {
@@ -822,44 +926,34 @@ video {
   gap: 1rem;
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
-
-.space-y-0 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0px * var(--tw-space-y-reverse));
-}
-
-.space-y-0\.5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.125rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.125rem * var(--tw-space-y-reverse));
+.gap-8 {
+  gap: 2rem;
 }
 
 .overflow-hidden {
   overflow: hidden;
 }
 
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.whitespace-pre-line {
+  white-space: pre-line;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -874,6 +968,14 @@ video {
   border-right-width: 1px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-l {
+  border-left-width: 1px;
+}
+
 .border-\[var\(--color-border-light\)\] {
   border-color: var(--color-border-light);
 }
@@ -883,13 +985,26 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.bg-\[var\(--color-bg-lightest\)\] {
-  background-color: var(--color-bg-lightest);
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-black\/10 {
+  border-color: rgb(0 0 0 / 0.1);
+}
+
+.border-black\/5 {
+  border-color: rgb(0 0 0 / 0.05);
+}
+
+.bg-\[var\(--color-bg-lightest\)\] {
+  background-color: var(--color-bg-lightest);
 }
 
 .bg-gray-800 {
@@ -897,12 +1012,30 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
+.bg-\[var\(--color-bg\)\] {
+  background-color: var(--color-bg);
+}
+
 .bg-\[var\(--color-background\)\] {
   background-color: var(--color-background);
 }
 
-.bg-\[var\(--color-bg-light\)\] {
-  background-color: var(--color-bg-light);
+.bg-opacity-95 {
+  --tw-bg-opacity: 0.95;
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.from-\[var\(--color-background\)\] {
+  --tw-gradient-from: var(--color-background) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 
 .object-cover {
@@ -922,24 +1055,24 @@ video {
   padding: 1rem;
 }
 
-.p-\[8vw\] {
-  padding: 8vw;
-}
-
-.p-12 {
-  padding: 3rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
 .p-8 {
   padding: 2rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
+.p-\[8vw\] {
+  padding: 8vw;
 }
 
-.p-6 {
-  padding: 1.5rem;
+.p-\[4vw\] {
+  padding: 4vw;
+}
+
+.p-\[6vw\] {
+  padding: 6vw;
 }
 
 .px-4 {
@@ -957,27 +1090,53 @@ video {
   padding-right: 8vw;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
+.py-\[4vw\] {
+  padding-top: 4vw;
+  padding-bottom: 4vw;
+}
+
+.py-\[6vw\] {
+  padding-top: 6vw;
+  padding-bottom: 6vw;
+}
+
+.py-\[8vw\] {
+  padding-top: 8vw;
+  padding-bottom: 8vw;
+}
+
+.py-\[12vw\] {
+  padding-top: 12vw;
+  padding-bottom: 12vw;
+}
+
+.px-\[4vw\] {
+  padding-left: 4vw;
+  padding-right: 4vw;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-\[6vw\] {
+  padding-left: 6vw;
+  padding-right: 6vw;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .pb-\[2vw\] {
@@ -988,24 +1147,88 @@ video {
   padding-bottom: 6vw;
 }
 
-.pt-\[6vw\] {
-  padding-top: 6vw;
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .pt-\[8vw\] {
   padding-top: 8vw;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
+.pt-12 {
+  padding-top: 3rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pt-\[4vw\] {
+  padding-top: 4vw;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-\[12vw\] {
+  padding-top: 12vw;
+}
+
+.pb-\[4vw\] {
+  padding-bottom: 4vw;
+}
+
+.pb-\[8vw\] {
+  padding-bottom: 8vw;
+}
+
+.pt-\[48vw\] {
+  padding-top: 48vw;
+}
+
+.pt-\[32vw\] {
+  padding-top: 32vw;
+}
+
+.pt-\[24vw\] {
+  padding-top: 24vw;
+}
+
+.pt-\[16vw\] {
+  padding-top: 16vw;
+}
+
+.pt-\[6vw\] {
+  padding-top: 6vw;
+}
+
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pt-\[40vw\] {
+  padding-top: 40vw;
+}
+
+.pt-\[36vw\] {
+  padding-top: 36vw;
 }
 
 .text-2xl {
@@ -1020,6 +1243,11 @@ video {
 
 .text-5xl {
   font-size: 3rem;
+  line-height: 1;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
   line-height: 1;
 }
 
@@ -1042,13 +1270,58 @@ video {
   line-height: 1.75rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+
+.text-\[80\%\] {
+  font-size: 80%;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-\[90\%\] {
+  font-size: 90%;
 }
 
 .font-semibold {
   font-weight: 600;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-\[500\] {
+  font-weight: 500;
+}
+
+.font-\[600\] {
+  font-weight: 600;
+}
+
+.leading-4 {
+  line-height: 1rem;
+}
+
+.leading-\[100\%\] {
+  line-height: 100%;
+}
+
+.leading-\[125\%\] {
+  line-height: 125%;
+}
+
+.leading-\[112\.5\%\] {
+  line-height: 112.5%;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
 }
 
 .tracking-\[-0\.0125em\] {
@@ -1059,9 +1332,43 @@ video {
   letter-spacing: -0.025em;
 }
 
+.tracking-\[-1\%\] {
+  letter-spacing: -1%;
+}
+
+.tracking-\[-1em\] {
+  letter-spacing: -1em;
+}
+
+.tracking-\[-\.05em\] {
+  letter-spacing: -.05em;
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-red-50 {
+  --tw-text-opacity: 1;
+  color: rgb(254 242 242 / var(--tw-text-opacity));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.text-\[500\] {
+  color: 500;
+}
+
+.text-\[600\] {
+  color: 600;
+}
+
+.underline {
+  text-decoration-line: underline;
 }
 
 .opacity-40 {
@@ -1074,6 +1381,28 @@ video {
 
 .opacity-50 {
   opacity: 0.5;
+}
+
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.opacity-10 {
+  opacity: 0.1;
+}
+
+.opacity-15 {
+  opacity: 0.15;
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .transition {
@@ -1090,6 +1419,12 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-200 {
   transition-duration: 200ms;
 }
@@ -1100,6 +1435,45 @@ video {
 
 .hover\:bg-\[var\(--color-bg-lightest\)\]:hover {
   background-color: var(--color-bg-lightest);
+}
+
+.hover\:bg-\[var\(--color-background\)\]:hover {
+  background-color: var(--color-background);
+}
+
+.hover\:bg-\[var\(--color-bg\)\]:hover {
+  background-color: var(--color-bg);
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white\/40:hover {
+  background-color: rgb(255 255 255 / 0.4);
+}
+
+.hover\:bg-white\/50:hover {
+  background-color: rgb(255 255 255 / 0.5);
+}
+
+.hover\:bg-gray-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-100\/50:hover {
+  background-color: rgb(243 244 246 / 0.5);
+}
+
+.hover\:opacity-100:hover {
+  opacity: 1;
 }
 
 .group:hover .group-hover\:underline {
@@ -1118,5 +1492,12 @@ video {
   .md\:py-\[4vw\] {
     padding-top: 4vw;
     padding-bottom: 4vw;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark\:text-gray-300 {
+    --tw-text-opacity: 1;
+    color: rgb(209 213 219 / var(--tw-text-opacity));
   }
 }
