--- a/themes/blank/layouts/partials/header.html
+++ b/themes/blank/layouts/partials/header.html
@@ -12,7 +12,7 @@
       {{ $currentPage := . }}
       {{ range .Site.Menus.main }}
         <a
-          class="p-2 px-4 text-base bg-[var(--color-bg-lightest)] transition ease-in-out duration-200 rounded-full {{ if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}
+          class="p-2 px-4 text-base font-[600] transition ease-in-out duration-200 rounded-full {{ if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}
             active
           {{ end }}
         "
