update public files again

--- a/themes/blank/layouts/_default/summary.html
+++ b/themes/blank/layouts/_default/summary.html
@@ -2,7 +2,7 @@
   class="flex flex-row border-b border-l border-black/5"
   data-category="{{ .Params.category }}"
 >
-  <a href="{{ .Permalink }}" class="w-full">
+  <a href="{{ .Permalink }}" class="w-full text-decoration-none">
     <article
       class="hover:bg-gray-100/50 transition-colors group relative w-full p-[6vw]"
     >
