--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,17 @@ h6 {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
+  color: var(--color-foreground);
+}
+
+/* Override browser default link styles */
+a:-webkit-any-link {
+  text-decoration: none !important;
+}
+
+a:any-link {
+  text-decoration: none !important;
 }
 
 body {
