--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -54,6 +54,7 @@ h6 {
 
 a {
   text-decoration: none !important;
+  color: var(--color-foreground);
 }
 
 /* Override browser default link styles */
