remove more link colors

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,6 +60,7 @@ a {
 /* Override browser default link styles */
 a:-webkit-any-link {
   text-decoration: none !important;
+  color: var(--color-foreground) !important;
 }
 
 a:any-link {
