--- a/themes/blank/assets/style.css
+++ b/themes/blank/assets/style.css
@@ -18,6 +18,10 @@
   position: relative
 }
 
+.sticky {
+  position: sticky
+}
+
 .bottom-0 {
   bottom: 0px
 }
@@ -103,6 +107,34 @@
   margin-top: auto
 }
 
+.mt-40 {
+  margin-top: 10rem
+}
+
+.mt-48 {
+  margin-top: 12rem
+}
+
+.mt-64 {
+  margin-top: 16rem
+}
+
+.mt-60 {
+  margin-top: 15rem
+}
+
+.mt-80 {
+  margin-top: 20rem
+}
+
+.mb-12 {
+  margin-bottom: 3rem
+}
+
+.mb-16 {
+  margin-bottom: 4rem
+}
+
 .block {
   display: block
 }
@@ -133,6 +165,14 @@
 
 .h-full {
   height: 100%
+}
+
+.h-\[72vh\] {
+  height: 72vh
+}
+
+.h-\[70vh\] {
+  height: 70vh
 }
 
 .w-64 {
@@ -253,6 +293,10 @@
 
 .border-t {
   border-top-width: 1px
+}
+
+.border-solid {
+  border-style: solid
 }
 
 .border-\[var\(--color-border-light\)\] {
@@ -381,6 +425,26 @@
   line-height: 1.75rem
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem
+}
+
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1
+}
+
 .font-\[600\] {
   font-weight: 600
 }
@@ -389,8 +453,28 @@
   font-weight: 600
 }
 
+.font-\[500\] {
+  font-weight: 500
+}
+
 .tracking-tight {
   letter-spacing: -0.025em
+}
+
+.tracking-tighter {
+  letter-spacing: -0.05em
+}
+
+.tracking-\[-0\.05em\] {
+  letter-spacing: -0.05em
+}
+
+.tracking-\[-0\.025em\] {
+  letter-spacing: -0.025em
+}
+
+.tracking-\[-0\.0375em\] {
+  letter-spacing: -0.0375em
 }
 
 .text-gray-500 {
