--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -45,13 +45,12 @@
     <link rel="apple-touch-icon" href="/favicon.svg" />
   </head>
   <body>
-    <header class="fixed top-0 left-0 right-0 z-50 px-[6vw] pt-[6vw]">
+    <header class="sticky top-0 left-0 z-50 px-[6vw] pt-[6vw]">
       {{ partial "header.html" . }}
     </header>
 
-    <div class="w-full mx-auto mt-32">
-      {{ block "main" . }}{{ end }}
-    </div>
+    {{ block "main" . }}{{ end }}
+
 
     <script>
       // Simple page preloading for faster navigation
