--- a/themes/blank/layouts/_default/summary.html
+++ b/themes/blank/layouts/_default/summary.html
@@ -1,5 +1,5 @@
 <li
-  class="flex flex-row border-b border-l border-black/5"
+  class="post-item flex flex-row border-b border-l border-solid border-black/5"
   data-category="{{ .Params.category }}"
 >
   <a href="{{ .Permalink }}" class="w-full no-underline">
