--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -6,6 +6,10 @@
   pointer-events: none
 }
 
+.visible {
+  visibility: visible
+}
+
 .fixed {
   position: fixed
 }
@@ -141,6 +145,10 @@
 
 .grid {
   display: grid
+}
+
+.hidden {
+  display: none
 }
 
 .h-16 {
