--- a/themes/blank/assets/style.css
+++ b/themes/blank/assets/style.css
@@ -6,6 +6,10 @@
   pointer-events: none
 }
 
+.visible {
+  visibility: visible
+}
+
 .fixed {
   position: fixed
 }
@@ -149,6 +153,10 @@
 
 .grid {
   display: grid
+}
+
+.hidden {
+  display: none
 }
 
 .h-16 {
