--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -58,6 +58,10 @@
   z-index: 50
 }
 
+.z-10 {
+  z-index: 10
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto
@@ -187,8 +191,16 @@
   width: 100%
 }
 
+.w-7 {
+  width: 1.75rem
+}
+
 .min-w-9 {
   min-width: 2.25rem
+}
+
+.min-w-7 {
+  min-width: 1.75rem
 }
 
 .max-w-4xl {
@@ -213,6 +225,14 @@
 
 .flex-1 {
   flex: 1 1 0%
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+}
+
+.resize {
+  resize: both
 }
 
 .grid-cols-1 {
@@ -257,6 +277,10 @@
 
 .gap-4 {
   gap: 1rem
+}
+
+.gap-0 {
+  gap: 0px
 }
 
 .overflow-hidden {
@@ -360,6 +384,14 @@
   padding: 8vw
 }
 
+.p-3 {
+  padding: 0.75rem
+}
+
+.p-1 {
+  padding: 0.25rem
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem
@@ -385,12 +417,35 @@
   padding-bottom: 0.5rem
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem
+}
+
+.px-\[4vw\] {
+  padding-left: 4vw;
+  padding-right: 4vw
+}
+
+.py-\[4vw\] {
+  padding-top: 4vw;
+  padding-bottom: 4vw
+}
+
 .pt-\[6vw\] {
   padding-top: 6vw
 }
 
 .pt-\[8vw\] {
   padding-top: 8vw
+}
+
+.pl-3 {
+  padding-left: 0.75rem
+}
+
+.pr-4 {
+  padding-right: 1rem
 }
 
 .text-5xl {
