--- a/themes/blank/assets/style.css
+++ b/themes/blank/assets/style.css
@@ -58,6 +58,10 @@
   z-index: 50
 }
 
+.z-10 {
+  z-index: 10
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto
@@ -195,8 +199,16 @@
   width: 100%
 }
 
+.w-7 {
+  width: 1.75rem
+}
+
 .min-w-9 {
   min-width: 2.25rem
+}
+
+.min-w-7 {
+  min-width: 1.75rem
 }
 
 .max-w-4xl {
@@ -221,6 +233,14 @@
 
 .flex-1 {
   flex: 1 1 0%
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+}
+
+.resize {
+  resize: both
 }
 
 .grid-cols-1 {
@@ -265,6 +285,10 @@
 
 .gap-4 {
   gap: 1rem
+}
+
+.gap-0 {
+  gap: 0px
 }
 
 .overflow-hidden {
@@ -368,6 +392,14 @@
   padding: 8vw
 }
 
+.p-3 {
+  padding: 0.75rem
+}
+
+.p-1 {
+  padding: 0.25rem
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem
@@ -393,6 +425,21 @@
   padding-bottom: 0.5rem
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem
+}
+
+.px-\[4vw\] {
+  padding-left: 4vw;
+  padding-right: 4vw
+}
+
+.py-\[4vw\] {
+  padding-top: 4vw;
+  padding-bottom: 4vw
+}
+
 .pb-\[2vw\] {
   padding-bottom: 2vw
 }
@@ -403,6 +450,14 @@
 
 .pt-\[8vw\] {
   padding-top: 8vw
+}
+
+.pl-3 {
+  padding-left: 0.75rem
+}
+
+.pr-4 {
+  padding-right: 1rem
 }
 
 .text-5xl {
