--- a/themes/blank/static/css/tailwind.css
+++ b/themes/blank/static/css/tailwind.css
@@ -135,6 +135,10 @@
   margin-bottom: 4rem
 }
 
+.mt-96 {
+  margin-top: 24rem
+}
+
 .block {
   display: block
 }
@@ -446,6 +450,14 @@
 
 .pr-4 {
   padding-right: 1rem
+}
+
+.pt-96 {
+  padding-top: 24rem
+}
+
+.pt-64 {
+  padding-top: 16rem
 }
 
 .text-5xl {
