--- a/themes/blank/layouts/_default/about.html
+++ b/themes/blank/layouts/_default/about.html
@@ -1,3 +1,3 @@
 {{ define "main" }}
-  <div class="long-form p-[8vw] pt-64">{{ .Content }}</div>
+  <div class="long-form p-[4vw]">{{ .Content }}</div>
 {{ end }}
