--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -45,7 +45,7 @@
     <link rel="apple-touch-icon" href="/favicon.svg" />
   </head>
   <body>
-    <div class="fixed top-0 left-0 right-0 z-50 px-[4vw] py-[4vw]">
+    <div class="sticky top-0 left-0 z-50 px-[4vw] py-[4vw]">
       {{ partial "header.html" . }}
     </div>
 
