--- a/themes/blank/layouts/_default/single.html
+++ b/themes/blank/layouts/_default/single.html
@@ -3,16 +3,17 @@
   <main class="relative w-full flex flex-col justify-center px-[6vw] pt-[6vw]">
     <!-- Narrow column of content -->
     <div class="max-w-4xl mx-auto">
-      <div class=" mx-auto max-w-[--content-width] relative mb-16">
-        <p class="text-6xl font-[600] tracking-[-0.0375em] mb-4">
+      <div class=" mx-auto max-w-[--content-width] relative mb-12">
+        <time
+          class="text-base font-[600] opacity-30"
+          datetime="{{ .Date.Format "January 2, 2006" }}"
+        >
+          {{ .Date.Format "January 2, 2006" }}
+        </time>
+
+        <p class="text-4xl font-[600] tracking-[-0.0375em] mt-4">
           {{ .Title }}
         </p>
-        <time
-          class="mono text-base opacity-45"
-          datetime="{{ .Date.Format "2006-01-02T15:04:05" }}"
-        >
-          {{ .Date.Format "01.02.06" }}
-        </time>
       </div>
 
       <div
